--- a/donrep/flottants/exercicesflottants.html
+++ b/donrep/flottants/exercicesflottants.html
@@ -154,12 +154,24 @@
 
 
               <div class="btn-wrap">
-                <a href="" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/0ff6-4745870" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
 
+          <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>Lien vers des exercices de conversions</h3>
+              <ul> QCM sur un site externe
+              </ul>
 
+
+              <div class="btn-wrap">
+                <a href="https://www.kwyk.fr/exercices/mathematiques/1n/representation-des-donnees-types-et-valeurs-de-base/nombres-flottants/" class="btn-buy">Y aller</a>
+               <a href="https://info.blaisepascal.fr/nsi-exercices-representation-des-entiers/" class="btn-buy">Page2</a>
+              </div>
+            </div>
+          </div> 
           <div class="section-title" data-aos="zoom-out">
             <h3 id="pj">Pièces jointes</h3>
 
