--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
               <li><a href="./donrep/flottants/exercicesflottants.html">Exercices Flottants</a></li>
             </ul>
           </li>
+              <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> <i
+                        class="bi bi-chevron-down"></i></a>
+                    <!-- <ul>
+                    <li><a href="./typeconstruits/parindice/puissance4.html">Puissance 4</a> </li>
+                    <li><a href="./typeconstruits/parindice/tuple.html">Tuple</a></li>
+                    <li><a href="./typeconstruits/parindice/tableau.html">Tableau</a></li>
+                  </ul> -->
+                  </li>
           <li class="dropdown"><a href="#"><span>Thèmes</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>Représentation des données</span> <i
