--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
               <li><a href="./donrep/flottants/exercicesflottants.html">Exercices Flottants</a></li>
             </ul>
           </li>
-              <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> <i
-                        class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> </a>
                     <!-- <ul>
                     <li><a href="./typeconstruits/parindice/puissance4.html">Puissance 4</a> </li>
                     <li><a href="./typeconstruits/parindice/tuple.html">Tuple</a></li>
