--- a/typeconstruits/parindice/tableau.html
+++ b/typeconstruits/parindice/tableau.html
@@ -67,6 +67,9 @@
               <li><a href="./puissance4.html">Puissance 4</a> </li>
               <li><a href="./tuple.html">Tuple</a></li>
               <li><a href="./tableau.html">Tableau</a></li>
+              <li><a href="./mutabilite.html">Mutabilité</a></li>
+              <li><a href="./exotableautuple.html">Exercices tuple - tableau</a></li>
+              <li><a href="./tableaudetableau.html">Tableau à 2 dimensions</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
@@ -75,7 +78,6 @@
             <ul>
               <li><a href="#liens">Liens</a></li>
               <li><a href="#pj">Pieces Jointes</a></li>
-
             </ul>
           </li>
 
