Passage nouvelle formule pour exos

--- a/typeconstruits/parindice/mutabilite.html
+++ b/typeconstruits/parindice/mutabilite.html
@@ -69,7 +69,7 @@
               <li><a href="./tuple.html">Tuple</a></li>
               <li><a href="./tableau.html">Tableau</a></li>
               <li><a href="./mutabilite.html">Mutabilité</a></li>
-              <li><a href="./exotableautuple.html">Exercices tuple - tableau</a></li>
+              <li><a href="./tableau.html#exos">Exercices tuple - tableau</a></li>>
               <li><a href="./tableaudetableau.html">Tableau à 2 dimensions</a></li>
             </ul>
           </li>
