--- a/typeconstruits/parindice/tableau.html
+++ b/typeconstruits/parindice/tableau.html
@@ -68,7 +68,7 @@
               <li><a href="./tuple.html">Tuple</a></li>
               <li><a href="./tableau.html">Tableau</a></li>
               <li><a href="./mutabilite.html">Mutabilité</a></li>
-              <li><a href="./exotableautuple.html">Exercices tuple - tableau</a></li>
+              <li><a href="./tableau.html#exos">Exercices tuple - tableau</a></li>
               <li><a href="./tableaudetableau.html">Tableau à 2 dimensions</a></li>
             </ul>
           </li>
@@ -82,7 +82,7 @@
           </li>
 
 
-          <!-- <li><a class="nav-link scrollto" href="#exos">Exercices</a></li> -->
+          <li><a class="nav-link scrollto" href="#exos">Exercices</a></li> 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -277,6 +277,34 @@ Les tableaux sont mutables, ce qui signifie qu’on peut modifier leurs élémen
     </section>
     <!-- End Resume Section -->
 
+<!-- Exos  Section -->
+<section id="exos" class="services">
+  <div class="container">
+
+    <div class="section-title" data-aos="zoom-out">
+      <h2>Exercices</h2>
+    
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <div class="icon-box" data-aos="zoom-in-left">
+          <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
+          <h4 class="title"><a href="">Les exercices du notebook</a></h4>
+          <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/2a6b-4965233"  >Y Aller</a></p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
+        <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
+          <div class="icon"><i class="bi bi-book" style="color: #e9bf06;"></i></div>
+          <h4 class="title"><a href="">Le site ensi </a></h4>
+          <p class="description"><a href="https://e-nsi.gitlab.io/pratique/A/15-tab_parcours/"  >Y Aller</a></p>  </div>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End exos  Section -->
     <!-- ======= Annexes Section ======= -->
     <section id="annexes" class="pricing">
       <div class="container">
