--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         class="bi bi-chevron-right"></i></a>
                     <ul>
                       <li><a href="./typeconstruits/parindice/tuple.html">Tuple</a></li>
-                      <li><a href="./typeconstruits/parindice/tableau.html">Tableau</a></li>
+                      <li><a href="./typeconstruits/parindice/tableau.html#exos">Tableau</a></li>
                       <li><a href="./typeconstruits/parindice/puissance4.html">Puissance 4</a> </li>
                       <li><a href="./typeconstruits/parindice/mutabilite.html">Mutabilité</a></li>
                       <li><a href="./typeconstruits/parindice/exotableautuple.html">Exercices tuple - tableau</a></li>
@@ -250,7 +250,7 @@
               <li><a href="./typeconstruits/parindice/tableau.html">Tableau</a></li>
               <li><a href="./typeconstruits/parindice/puissance4.html">Puissance 4</a> </li>
               <li><a href="./typeconstruits/parindice/mutabilite.html">Mutabilité</a></li>
-              <li><a href="./typeconstruits/parindice/exotableautuple.html">Exercices tuple - tableau</a></li>
+              <li><a href="./typeconstruits/parindice/tableau.html#exos">Exercices tuple - tableau</a></li>
               <li><a href="./typeconstruits/parindice/tableaudetableau.html">Tableau à 2 dimensions</a></li>
             </ul>
           </li>
