--- a/algo/parcours/parcours.html
+++ b/algo/parcours/parcours.html
@@ -248,7 +248,7 @@
         <div class="icon-box" data-aos="zoom-in-left">
           <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
           <h4 class="title"><a href="">Les exercices du notebook</a></h4>
-          <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/2a6b-4965233"  >Y Aller</a></p>
+          <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/1936-5115758"  >Y Aller</a></p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
@@ -285,7 +285,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/f085-4816825" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/4a83-5115754" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
@@ -298,7 +298,7 @@
 
           </div>
 
-          <div class="row">
+          <!-- <div class="row">
 
 
          <div class="col-lg-3 col-md-6">
@@ -313,7 +313,7 @@
                 </div>
               </div>
             </div>
-          </div> 
+          </div>  -->
 
     </section><!-- End Annexes Section -->
   </main><!-- End #main -->
