--- a/algo/parcours/parcours.html
+++ b/algo/parcours/parcours.html
@@ -280,7 +280,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="box" data-aos="zoom-in">
               <h3>Lien vers le notebook</h3>
-              <ul> La calculatrice
+              <ul> Sur capytale
               </ul>
 
 
