ajout page porte logique + style des tableaux virou

--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
                       </li>
                     </ul>
                   </li>
-                  <li class="dropdown"><a href="#"><span>Logiques</span> <i class="bi bi-chevron-right"></i></a>
+                  <li class="dropdown"><a href="#"><span>Algèbre booléenne</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="">Portes logiques</a></li>
-                      <li><a href="">Additionneur</a></li>
+                      <li><a href="./amo/logique/Porteslogiques.html">Portes logiques</a></li>
+                      <!-- <li><a href="">Additionneur</a></li>
                       <li><a href="">Exercices fonctions booléennes</a></li>
                       <li><a href="">Encodage des caractères</a></li>
-                      <li><a href="">Exercices encodage</a></li>
+                      <li><a href="">Exercices encodage</a></li> -->
                     </ul>
                   </li>
 
@@ -232,7 +232,8 @@
                   <li><a href="./algo/parcours/parcours.html#exos">Exercice parcours</a></li>
                 
                 </ul>
-              </li>
+                  </li>  
+                 
                   <li><a href="">Appel de fonction</a></li>
                   <li><a href="">Dérouler un algorithme</a></li>
                   <li><a href="">TP Le crêpier psychorigide</a></li>
