--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                   <li class="dropdown"><a href="#"><span>Algèbre booléenne</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
                       <li><a href="./amo/logique/Porteslogiques.html">Portes logiques</a></li>
-                      <!-- <li><a href="">Additionneur</a></li>
-                      <li><a href="">Exercices fonctions booléennes</a></li>
+                      <li><a href="./amo/logique/additionneur.html">Additionneur</a></li>
+                      <!-- <li><a href="">Exercices fonctions booléennes</a></li>
                       <li><a href="">Encodage des caractères</a></li>
                       <li><a href="">Exercices encodage</a></li> -->
                     </ul>
@@ -254,13 +254,15 @@
             </ul>
           </li>
 
-          <li class="dropdown"><a href=""><span>Parcours</span> <i
+          <li class="dropdown"><a href=""><span>Algèbre booléenne</span> <i
             class="bi bi-chevron-down"></i></a>
-        <ul>
-          <li><a href="./algo/parcours/parcours.html">Recherche Maximum</a></li>
-          <li><a href="./algo/parcours/parcours.html#exos">Exercice parcours</a></li>
-        
-        </ul>
+            <ul>
+              <li><a href="./amo/logique/Porteslogiques.html">Portes logiques</a></li>
+              <li><a href="./amo/logique/additionneur.html">Additionneur</a></li>
+              <!-- <li><a href="">Exercices fonctions booléennes</a></li>
+              <li><a href="">Encodage des caractères</a></li>
+              <li><a href="">Exercices encodage</a></li> -->
+            </ul>
       </li>
         
           <li><a class="nav-link scrollto" href="#about">A propos</a></li>
