aout des encodages des characteres

--- a/ihm/ihm/ihmjavascript.html
+++ b/ihm/ihm/ihmjavascript.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Algorithmique - Parcours</title>
+  <title>Interractions utilisateur</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -298,22 +298,22 @@
 
           </div>
 
-          <!-- <div class="row">
+       <div class="row">
 
 
          <div class="col-lg-3 col-md-6">
               <div class="box" data-aos="zoom-in">
-                <h3>Le fichier du notebook </h3>
-                <ul>en pdf</ul>
+                <h3>Le site annexe</h3>
+                <ul></ul>
 
 
                 </ul>
                 <div class="btn-wrap">
-                  <a target="_blank" href="ressources/fonctionspremiereapprochecalculatrice.pdf" class="btn-buy">Télécharger</a>
+                  <a target="_blank" href="ressources/site-specialites.zip" class="btn-buy">Télécharger</a>
                 </div>
               </div>
             </div>
-          </div>  -->
+          </div>  
 
     </section><!-- End Annexes Section -->
   </main><!-- End #main -->
