--- a/ihm/ihm/formulaire.html
+++ b/ihm/ihm/formulaire.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Algorithmique - Parcours</title>
+  <title>Formulaires</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -90,7 +90,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Recherche d'un maximum - parcours</h2>
+          <h2 class="animate__animated animate__fadeInDown">Formulaire</h2>
           <!-- <a href="#resume" class="btn-get-started animate__animated animate__fadeInUp scrollto">Lire plus</a> -->
         </div>
       </div> <!---->
@@ -298,22 +298,22 @@
 
           </div>
 
-          <!-- <div class="row">
+       <div class="row">
 
 
          <div class="col-lg-3 col-md-6">
               <div class="box" data-aos="zoom-in">
-                <h3>Le fichier du notebook </h3>
-                <ul>en pdf</ul>
+                <h3>Le site annexe</h3>
+                <ul></ul>
 
 
                 </ul>
                 <div class="btn-wrap">
-                  <a target="_blank" href="ressources/fonctionspremiereapprochecalculatrice.pdf" class="btn-buy">Télécharger</a>
+                  <a target="_blank" href="ressources/premierformulaire.zip" class="btn-buy">Télécharger</a>
                 </div>
               </div>
             </div>
-          </div>  -->
+          </div>  
 
     </section><!-- End Annexes Section -->
   </main><!-- End #main -->
