--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                         <li><a href="">Exercices parcours séquentiel</a></li>
                       </ul>
                   </li>
+                  <li class="dropdown"><a href=""><span>Charactères</span> <i class="bi bi-chevron-right"></i></a>
+                    <ul>
+                      <li><a href="./donrep/characteres/characteres.html">Charactères</a> </li>
+                      <li><a href="./donrep/characteres/characteres.html#exos">Exercices encodage</a> </li>
+                    </ul>
+                  </li>
                </ul>  
                   </li>
             <li class="dropdown"><a href="#"><span>Langages / programmation</span> <i
@@ -161,9 +167,8 @@
                     <ul>
                       <li><a href="./amo/logique/Porteslogiques.html">Portes logiques</a></li>
                       <li><a href="./amo/logique/additionneur.html">Additionneur</a></li>
-                      <!-- <li><a href="">Exercices fonctions booléennes</a></li>
-                      <li><a href="">Encodage des caractères</a></li>
-                      <li><a href="">Exercices encodage</a></li> -->
+                      <li><a href="./amo/logique/Porteslogiques.html#exos">Exercices fonctions booléennes</a></li>
+                     
                     </ul>
                   </li>
 
