--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                         <li><a href="">Exercices parcours séquentiel</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown"><a href=""><span>Charactères</span> <i class="bi bi-chevron-right"></i></a>
+                  <li class="dropdown"><a href=""><span>Caractères</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="./donrep/characteres/characteres.html">Charactères</a> </li>
+                      <li><a href="./donrep/characteres/characteres.html">Caractères</a> </li>
                       <li><a href="./donrep/characteres/characteres.html#exos">Exercices encodage</a> </li>
                     </ul>
                   </li>
