--- a/donrep/dico/dico.html
+++ b/donrep/dico/dico.html
@@ -292,7 +292,7 @@ AA-123-AA
         <div class="icon-box" data-aos="zoom-in-left">
           <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
           <h4 class="title"><a href="">Les exercices du notebook</a></h4>
-          <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/a0af-5558632"  >Y Aller</a></p>
+          <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/f77a-5623120"  >Y Aller</a></p>
         </div>
       </div>
      <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
