--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                   </li>
                   <li class="dropdown"><a href="#"><span>Dictionnaire</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="">Dictionnaire</a></li>
-                      <li><a href="">Exercices dictionnaire</a></li>
+                      <li><a href="./donrep/dico/dico.html">Dictionnaire</a></li>
+                      <li><a href="./donrep/dico/dico.html#exos">Exercices dictionnaire</a></li>
                     </ul>
                   </li>
                   <li><a href="">Documentation (méthodes des tableaux)</a></li>
