Correction d'une faute

--- a/donrep/dico/dico.html
+++ b/donrep/dico/dico.html
@@ -241,7 +241,7 @@ vehicule1 = {"marque": "Renault",
 
             <div class=" theme-atom-one-dark shadow-3xl text-sm relative overflow-hidden max-w-full tab-size h-full">
                   <pre>
-                    <code class="langage-python">vfor cle, val in vehicule1.items():
+                    <code class="langage-python">for cle, val in vehicule1.items():
  print(cle, " ", val)
                     </code></pre>
                 </div>             
