--- a/index.html
+++ b/index.html
@@ -252,11 +252,23 @@
             </ul>
           </li>
 
-          <li class="dropdown"><a href=""><span>Algèbre booléenne</span> <i
+          <li class="dropdown"><a href=""><span>Traitement des données</span> <i
             class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./amo/logique/Porteslogiques.html">Portes logiques</a></li>
-              <li><a href="./amo/logique/additionneur.html">Additionneur</a></li>
+              <li class="dropdown"><a href="#"><span>Dictionnaire</span> <i class="bi bi-chevron-right"></i></a>
+                    <ul>
+                      <li><a href="./donrep/dico/dico.html">Dictionnaire</a></li>
+                      <li><a href="./donrep/dico/dico.html#exos">Exercices dictionnaire</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-right"></i></a>
+                    <ul>
+                      <li><a href="./dontable/importerdesdonnees.html">Importer des données</a></li>
+                      <li><a href="./dontable/importerdesdonnees.html#exos">Exercices dictionnaire</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> <i
+                    class="bi bi-chevron-right"></i></a></li>
             </ul>
       </li>
         
