--- a/dontable/donrep/importerdesdonnees.html
+++ b/dontable/donrep/importerdesdonnees.html
@@ -297,7 +297,7 @@ fichier.close()
 
                 </ul>
                 <div class="btn-wrap">
-                  <a target="_blank" href="ressources/eleves.zip" class="btn-buy">Télécharger</a>
+                  <a target="_blank" href="../ressources/eleves.zip" class="btn-buy">Télécharger</a>
                 </div>
               </div>
             </div>
@@ -310,7 +310,7 @@ fichier.close()
 
               </ul>
               <div class="btn-wrap">
-                <a target="_blank" href="ressources/exercices-table.zip" class="btn-buy">Télécharger</a>
+                <a target="_blank" href="../ressources/exercices-table.zip" class="btn-buy">Télécharger</a>
               </div>
             </div>
           </div>
