Ajout de la page pandas

--- a/dontable/dontable/importerdesdonnees.html
+++ b/dontable/dontable/importerdesdonnees.html
@@ -62,7 +62,13 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
-       
+          <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href=".importerdesdonnees.html">Importer des données</a></li>
+              <li><a href="./importerdesdonnees.html#exos">Exercices csv</a></li>
+              <li><a href="./TpPandas.html">Tp pandas</a></li>
+            </ul>
+          </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
           <li><a class="nav-link scrollto" href="#exos">Exercices</a></li> 
 
@@ -142,18 +148,7 @@
               <h4 class="d-none d-lg-block">Données en table</h4>
             </a>
           </li>
-          <li class="nav-item col-3" data-aos="zoom-in">
-            <a class="nav-link  show" data-bs-toggle="tab" href="#tab-2">
-              <i class="fa-solid fa-code"></i>
-              <h4 class="d-none d-lg-block">Implémentation en Python</h4>
-            </a>
-          </li>
-          <li class="nav-item col-3" data-aos="zoom-in">
-            <a class="nav-link  show" data-bs-toggle="tab" href="#tab-3">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <h4 class="d-none d-lg-block">Concepts clés abordés</h4>
-            </a>
-          </li>
+    
         </ul>
 
         <div class="tab-content" data-aos="fade-up">
@@ -297,7 +292,7 @@ fichier.close()
 
                 </ul>
                 <div class="btn-wrap">
-                  <a target="_blank" href="../ressources/eleves.zip" class="btn-buy">Télécharger</a>
+                  <a target="_blank" href="ressources/eleves.zip" class="btn-buy">Télécharger</a>
                 </div>
               </div>
             </div>
@@ -310,7 +305,7 @@ fichier.close()
 
               </ul>
               <div class="btn-wrap">
-                <a target="_blank" href="../ressources/exercices-table.zip" class="btn-buy">Télécharger</a>
+                <a target="_blank" href="ressources/exercices-table.zip" class="btn-buy">Télécharger</a>
               </div>
             </div>
           </div>
