--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
                   </li>
                   <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="./dontable/donrep/importerdesdonnees.html">Importer des données</a></li>
-                      <li><a href="./dontable/donrep/importerdesdonnees.html#exos">Exercices dictionnaire</a></li>
+                      <li><a href="./dontable/dontable/importerdesdonnees.html">Importer des données</a></li>
+                      <li><a href="./dontable/dontable/importerdesdonnees.html#exos">Exercices Csv</a></li>
+                      <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li>
                     </ul>
                   </li>
                   <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> <i
@@ -263,8 +264,9 @@
                   </li>
                   <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="./dontable/importerdesdonnees.html">Importer des données</a></li>
-                      <li><a href="./dontable/importerdesdonnees.html#exos">Exercices dictionnaire</a></li>
+                      <li><a href="./dontable/dontable/importerdesdonnees.html">Importer des données</a></li>
+                      <li><a href="./dontable/dontable/importerdesdonnees.html#exos">Exercices Csv</a></li>
+                      <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li>
                     </ul>
                   </li>
                   <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> <i
