--- a/dontable/dontable/importerdesdonnees.html
+++ b/dontable/dontable/importerdesdonnees.html
@@ -64,8 +64,10 @@
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
           <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href=".importerdesdonnees.html">Importer des données</a></li>
+              <li><a href="./importerdesdonnees.html">Importer des données</a></li>
               <li><a href="./importerdesdonnees.html#exos">Exercices csv</a></li>
+              <li><a href="./manipulerdonnees.html">Manipuler des données</a></li>
+              <li><a href="./manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
               <li><a href="./TpPandas.html">Tp pandas</a></li>
             </ul>
           </li>
