--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
                     <ul>
                       <li><a href="./dontable/dontable/importerdesdonnees.html">Importer des données</a></li>
                       <li><a href="./dontable/dontable/importerdesdonnees.html#exos">Exercices Csv</a></li>
+                      <li><a href="./dontable/dontable/manipulerdonnees.html">Manipuler des données</a></li>
+                      <li><a href="./dontable/dontable/manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
                       <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li>
                     </ul>
                   </li>
@@ -266,6 +268,8 @@
                     <ul>
                       <li><a href="./dontable/dontable/importerdesdonnees.html">Importer des données</a></li>
                       <li><a href="./dontable/dontable/importerdesdonnees.html#exos">Exercices Csv</a></li>
+                      <li><a href="./dontable/dontable/manipulerdonnees.html">Manipuler des données</a></li>
+                      <li><a href="./dontable/dontable/manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
                       <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li>
                     </ul>
                   </li>
