ajout du projet pipotron

--- a/dontable/dontable/tppandas.html
+++ b/dontable/dontable/tppandas.html
@@ -68,6 +68,7 @@
               <li><a href="./importerdesdonnees.html#exos">Exercices CSV</a></li>
               <li><a href="./manipulerdonnees.html">Manipuler des données</a></li>
               <li><a href="./manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
+              <li><a href="./projetpipotron.html">Projet</a></li>
               <li><a href="./TpPandas.html">Tp pandas</a></li>
             </ul>
           </li>
