--- a/index.html
+++ b/index.html
@@ -198,13 +198,7 @@
               </li>
               <li class="dropdown"><a href="#"><span>Traitement des données</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-<!--            
-                  <li class="dropdown"><a href="#"><span>Projet numworks</span> <i class="bi bi-chevron-right"></i></a>
-                    <ul>
-                      <li><a href="">Projet numworks - tâches préparatoires</a></li>
-                      <li><a href="">Projet numworks</a></li>
-                    </ul>
-                  </li> -->
+
                   <li class="dropdown"><a href="#"><span>Dictionnaire</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
                       <li><a href="./donrep/dico/dico.html">Dictionnaire</a></li>
@@ -217,6 +211,7 @@
                       <li><a href="./dontable/dontable/importerdesdonnees.html#exos">Exercices Csv</a></li>
                       <li><a href="./dontable/dontable/manipulerdonnees.html">Manipuler des données</a></li>
                       <li><a href="./dontable/dontable/manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
+                      <li><a href="./dontable/dontable/projetpipotron.html">Projet</a></li>
                       <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li>
                     </ul>
                   </li>
@@ -270,6 +265,7 @@
                       <li><a href="./dontable/dontable/importerdesdonnees.html#exos">Exercices Csv</a></li>
                       <li><a href="./dontable/dontable/manipulerdonnees.html">Manipuler des données</a></li>
                       <li><a href="./dontable/dontable/manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
+                      <li><a href="./dontable/dontable/projetpipotron.html">Projet</a></li>
                       <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li>
                     </ul>
                   </li>
