--- a/ihm/ihm/ihmjavascript.html
+++ b/ihm/ihm/ihmjavascript.html
@@ -62,7 +62,17 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
-       
+          <li class="dropdown"><a href=""><span>Web</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="./principesweb.html">Principes du web</a></li>
+              <li><a href="./premierepageweb.html">Première page web</a></li>
+              <!-- <li><a href="./cssweb.html">Jolie page web</a></li>
+             <li><a href="./Positionnement.html">Positionnement</a></li>
+            <li><a href="./flexboxetbootstrap.html">FlexBox et boostrap</a></li>
+             <li><a href="./responsivedesign.html">Responsive Design</a></li> -->->
+           
+            </ul>
+          </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
           <li><a class="nav-link scrollto" href="#exos">Exercices</a></li> 
 
