--- a/index.html
+++ b/index.html
@@ -189,11 +189,18 @@
               <li class="dropdown"><a href="#"><span>Interaction Homme Machine</span> <i
                     class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="">Page web statique</a></li>
+                  <li><a href="./ihm/ihm/principesweb.html">Principes du web</a></li>
+                  <li><a href="./ihm/ihm/premierepageweb.html">Page web statique</a></li>
+                      <!-- <li><a href="./cssweb.html">Jolie page web</a></li>
+                     <li><a href="./Positionnement.html">Positionnement</a></li>
+                    <li><a href="./flexboxetbootstrap.html">FlexBox et boostrap</a></li>
+                     <li><a href="./responsivedesign.html">Responsive Design</a></li> 
+                  <li><a href=""></a></li>
                   <li><a href="">Mise en forme</a></li>
                   <li><a href="">Interaction utilisateur</a></li>
                   <li><a href="">Formulaire </a></li>
-                  <li><a href="">Evaluation Projet web</a></li>
+                  <li><a href="">Evaluation Projet web</a></li>-->
+                   
                 </ul>
               </li>
               <li class="dropdown"><a href="#"><span>Traitement des données</span> <i class="bi bi-chevron-right"></i></a>
