--- a/ihm/ihm/cssweb.html
+++ b/ihm/ihm/cssweb.html
@@ -273,7 +273,7 @@
               <ul> sur capytale
               </ul>
               <div class="btn-wrap">
-                <a target="_blank" href="https://capytale2.ac-paris.fr/web/c/3e9f-5506980" class="btn-buy"> Y aller</a>
+                <a target="_blank" href="https://capytale2.ac-paris.fr/web/c/cc9b-5973431" class="btn-buy"> Y aller</a>
               </div>
             </div>
           </div>
