--- a/ihm/ihm/cssweb.html
+++ b/ihm/ihm/cssweb.html
@@ -66,10 +66,10 @@
             <ul>
               <li><a href="./principesweb.html">Principes du web</a></li>
               <li><a href="./premierepageweb.html">Première page web</a></li>
-              <!-- <li><a href="./cssweb.html">Jolie page web</a></li>
+               <li><a href="./cssweb.html">Jolie page web</a></li>
              <li><a href="./Positionnement.html">Positionnement</a></li>
             <li><a href="./flexboxetbootstrap.html">FlexBox et boostrap</a></li>
-             <li><a href="./responsivedesign.html">Responsive Design</a></li> -->->
+            <!-- <li><a href="./responsivedesign.html">Responsive Design</a></li> -->
            
             </ul>
           </li>
