--- a/ihm/ihm/premierepageweb.html
+++ b/ihm/ihm/premierepageweb.html
@@ -66,8 +66,8 @@
             <ul>
               <li><a href="./principesweb.html">Principes du web</a></li>
               <li><a href="./premierepageweb.html">Première page web</a></li>
-              <!-- <li><a href="./cssweb.html">Jolie page web</a></li>
-             <li><a href="./Positionnement.html">Positionnement</a></li>
+               <li><a href="./cssweb.html">Jolie page web</a></li>
+          <!--   <li><a href="./Positionnement.html">Positionnement</a></li>
             <li><a href="./flexboxetbootstrap.html">FlexBox et boostrap</a></li>
              <li><a href="./responsivedesign.html">Responsive Design</a></li> -->
             </ul>
