--- a/ihm/ihm/flexboxetbootstrap.html
+++ b/ihm/ihm/flexboxetbootstrap.html
@@ -69,7 +69,10 @@
               <li><a href="./cssweb.html">Jolie page web</a></li>
              <li><a href="./Positionnement.html">Positionnement</a></li>
             <li><a href="./flexboxetbootstrap.html">FlexBox et boostrap</a></li>
-         <!--     <li><a href="./responsivedesign.html">Responsive Design</a></li> -->
+            <li><a href="./interractionsutilisateurs.html">Interractions utilisateur</a></li>
+            <li><a href="./formulaires.html">Formulaires</a></li>
+             <!-- <li><a href="./responsivedesign.html">Responsive Design</a></li>   -->
+
            
             </ul>
           </li>
