--- a/ihm/ihm/responsivedesign.html
+++ b/ihm/ihm/responsivedesign.html
@@ -70,7 +70,10 @@
               <li><a href="./cssweb.html">Jolie page web</a></li>
              <li><a href="./Positionnement.html">Positionnement</a></li>
             <li><a href="./flexboxetbootstrap.html">FlexBox et boostrap</a></li>
-             <li><a href="./responsivedesign.html">Responsive Design</a></li>  
+            <li><a href="./interractionsutilisateurs.html">Interractions utilisateur</a></li>
+            <li><a href="./formulaires.html">Formulaires</a></li>
+             <!-- <li><a href="./responsivedesign.html">Responsive Design</a></li>   -->
+
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#features">Résumé du cours</a></li>
