--- a/ihm/ihm/interractionsutilisateurs.html
+++ b/ihm/ihm/interractionsutilisateurs.html
@@ -74,7 +74,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#features">Résumé du cours</a></li>
-
+          <li><a class="nav-link scrollto" href="#exos">Exercices</a></li> 
           <li class="dropdown"><a href="#"><span>Annexes</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#liens">Liens</a></li>
