Ajout du tp et de la page sur les formulaires

--- a/ihm/ihm/interractionsutilisateurs.html
+++ b/ihm/ihm/interractionsutilisateurs.html
@@ -247,6 +247,17 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>Le TP </h3>
+              <ul> sur capytale
+              </ul>
+              <div class="btn-wrap">
+                <a target="_blank" href="https://capytale2.ac-paris.fr/web/c/c318-6203723" class="btn-buy"> Y aller</a>
+              </div>
+            </div>
+          </div>
+          
           <!-- <div class="col-lg-3 col-md-6">
             <div class="box" data-aos="zoom-in">
               <h3>Le cours en pdf </h3>
