ajout tri de cartes

--- a/algo/Tri/tricartes.html
+++ b/algo/Tri/tricartes.html
@@ -58,7 +58,7 @@
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
           <li class="dropdown"><a href="#"><span>Tris</span> <i class="bi bi-chevron-right"></i></a>
             <ul>
-              <li><a href="./tri.html">Tris</a></li>
+              <li><a href="./tricartes.html">Tris</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
