--- a/algo/dicho/dichoto.html
+++ b/algo/dicho/dichoto.html
@@ -59,7 +59,7 @@
           <li class="dropdown"><a href="#"><span>Dichotomie</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./dichoto.html">Recherche dichotomique</a></li>
-            >
+        
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
@@ -88,7 +88,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Trier des cartes</h2>
+          <h2 class="animate__animated animate__fadeInDown">Recherche dichotomique</h2>
           <p>Algorithmique</p>
           <!-- <a href="#resume" class="btn-get-started animate__animated animate__fadeInUp scrollto">Lire plus</a> -->
         </div>
