Ajout de la page de tri et modification du menu

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
             
               <li><a href="./algo/Tri/tricartes.html">Trier des cartes</a></li>
               <li><a href="./algo/Tri/tricartes.html#exos">Exercice Tris</a></li>
+              <li><a href="./algo/tricarte/tricarte.html">Tri en ligne</a></li>
               <li><a href="">TP Le crêpier psychorigide</a></li>
               <li><a href="">TP Pokémon</a></li>
             </ul>
