Ajout des pages sysexp

--- a/amo/initassembleur/757584initationassembleurrExercices.html
+++ b/amo/initassembleur/757584initationassembleurrExercices.html
@@ -62,6 +62,16 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
+           <li class="dropdown"><a href="#"><span>Assembleur</span> <i class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a href="../vonneumann/vonneumann.html">Von Neumann</a></li>
+                      <li><a href="../eureka/vonneumanneureka.html">Emission Eureka</a></li>
+                      <li><a href="./955407initationassembleurresume.html">Assembleur</a></li>
+                      <li><a href="./3154tpassembleurresume.html">TP Assembleur</a></li>
+                      <li><a href="./757584initationassembleurrExercices.html">Exercices Assembleur</a>
+                      </li>
+                    </ul>
+          </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
 
           <li><a class="nav-link scrollto" href="#annexes">Annexes</a></li>
