--- a/donrep/entiers/relatif.html
+++ b/donrep/entiers/relatif.html
@@ -62,6 +62,15 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
+             <li class="dropdown"><a href=""><span>Représentation des données - Entiers</span> <i
+                        class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a href="./entiers.html">Entiers</a> </li>
+                      <li><a href="./tpjeumain.html">Tp jeux de mains</a></li>
+                      <li><a href="./exercicesentiers.html">Exercices Entiers</a></li>
+                      <li><a href="./relatif.html">Relatifs</a></li>
+                    </ul>
+                  </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
 
           <li class="dropdown"><a href="#"><span>Annexes</span> <i class="bi bi-chevron-down"></i></a>
