--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
+           <li class="dropdown"><a href="#"><span>Assembleur</span> <i class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
+                      <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
+                      <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li>
+                      <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li>
+                      <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a>
+                      </li>
+                    </ul>
+           </li>
           <li class="dropdown"><a href="#"><span>Thèmes</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>Représentation des données</span> <i
@@ -148,11 +158,11 @@
                 <ul>
                   <li class="dropdown"><a href="#"><span>Assembleur</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <!-- <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
+                      <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
                       <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
                       <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li>
                       <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li>
-                      <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a> -->
+                      <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a>
                       </li>
                     </ul>
                   </li>
@@ -503,19 +513,29 @@
 
         <div class="row mt-5">
 
-          <div class="col-lg-4" data-aos="fade-right">
+        <div class="col-lg-4" data-aos="fade-right">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Lycée Saint sernin salle 129</h4>
-
-                <ul> Horaires
-                  <li>Lundi 8h - 12h</li>
-                  <li>Mardi 10h - 12h</li>
-                  <li>Jeudi 12h - 17h30</li>
-                  <li>Vendredi 8h - 17h30</li>
+              </div>
+            </div>
+         <div class="info">
+          <div class="address">
+              <!-- <i class="bi bi-clock"></i> -->
+              <h4>Horaires</h4>
+                <ul> 
+                  <li>Lundi 10h - 16h</li>
+                  <li>Mardi 8h - 12h</li>
+                  <li>Jeudi 8h - 16h</li>
+                  <li>Vendredi 8h - 16h</li>
                 </ul>
 
+              </div>
+               <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>A cette adresse : <b>nsimaletras@gmail.com</b></p>
               </div>
 
             </div>
