Correction du lien vers les dossiers vides.

--- a/divers/rentree/rentree.html
+++ b/divers/rentree/rentree.html
@@ -288,7 +288,7 @@
 
                 </ul>
                 <div class="btn-wrap">
-                  <a target="_blank" href="ressources/eleves.zip" class="btn-buy">Télécharger</a>
+                  <a target="_blank" href="./ressources/nsiprem.zip" class="btn-buy">Télécharger</a>
                 </div>
               </div>
             </div>
