ajout de l'index de la partie von neumann assembleur. suppression du programme dupliqué

--- a/amo/initassembleur/initationassembleur.html
+++ b/amo/initassembleur/initationassembleur.html
@@ -65,6 +65,7 @@
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
           <li class="dropdown"><a href="#"><span>Assembleur</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
+                      <li><a href="./assembleurIndex.html">Index</a></li>
                       <li><a href="../vonneumann/vonneumann.html">Von Neumann</a></li>
                       <li><a href="../eureka/vonneumanneureka.html">Emission Eureka</a></li>
                       <li><a href="./955407initationassembleurresume.html">Assembleur</a></li>
@@ -104,38 +105,7 @@
   </section> <!-- End Hero -->
 
   <main id="main">
-<!-- Section programme officiel -->
-    <section class="inner-page">
-      <div class="container">
-        <h2> Programme officiel</h2>
-        <table>
-          <thead>
-            <th>
-              Contenus
-            </th>
-            <th class="padleft10px">
-              Capacités attendues
-            </th>
-            <!-- <th> Commentaires</th> -->
-          </thead>
-          <tbody>
-          
-              <tr>
-                <td class="padleft10px">Modèle d’architecture séquentielle (von Neumann)</td>
-                <td class="padleft10px">Distinguer les rôles et les caractéristiques des différents constituants d’une machine.
-                  Dérouler l’exécution d’une séquence d’instructions simples du type langage machine.
-                   </td>
-              </tr>
-             
-            </tr>
-          </tbody>
-        </table>
 
-        <p>
-
-        </p>
-      </div>
-    </section><!-- End carousel -->
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="about">
       <div class="container">
