--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
            <li class="dropdown"><a href="#"><span>Assembleur</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
-                      <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
-                      <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
-                      <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li>
-                      <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li>
-                      <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a>
+                      <li><a href="./amo/initassembleur/assembleurIndex.html">Index</a></li>
+                      <li><a href="./amo/vonneumann/vonneumann.html">Von Neumann</a></li>
+                      <li><a href="./amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
+                      <li><a href="./amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li>
+                      <li><a href="./amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li>
+                      <li><a href="./amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a>
                       </li>
                     </ul>
            </li>
