--- a/amo/eureka/vonneumanneureka.html
+++ b/amo/eureka/vonneumanneureka.html
@@ -59,6 +59,7 @@
         <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
          <li class="dropdown"><a href="#"><span>Assembleur</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
+                      <li><a href="../initassembleur/assembleurIndex.html">Index</a></li>
                       <li><a href="../vonneumann/vonneumann.html">Von Neumann</a></li>
                       <li><a href="./vonneumanneureka.html">Emission Eureka</a></li>
                       <li><a href="../initassembleur/initationassembleur.html">Assembleur</a></li>
