--- a/index.html
+++ b/index.html
@@ -137,11 +137,10 @@
                   <li class="dropdown"><a href=""><span>Constructions élémentaires</span> <i
                         class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <!-- <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
+                       <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
                       <li><a href="./langageprog/constructions_elem/edi.html">Activités</a></li>
                       <li><a href="./langageprog/constructions_elem/exoconstructelem.html">Exercices</a></li>
-                      <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li> -->
-
+                      <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li>
                     </ul>
                   </li>
                   <li class="dropdown"><a href=""><span>Fonctions</span> <i class="bi bi-chevron-right"></i></a>
