Ajout de l'indes des constructions élémentaires

--- a/index.html
+++ b/index.html
@@ -56,17 +56,15 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
-           <li class="dropdown"><a href="#"><span>Assembleur</span> <i class="bi bi-chevron-down"></i></a>
-                    <ul>
-                      <li><a href="./amo/initassembleur/assembleurIndex.html">Index</a></li>
-                      <li><a href="./amo/vonneumann/vonneumann.html">Von Neumann</a></li>
-                      <li><a href="./amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
-                      <li><a href="./amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li>
-                      <li><a href="./amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li>
-                      <li><a href="./amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a>
-                      </li>
-                    </ul>
-           </li>
+          <li class="dropdown"><a href=""><span>Constructions élémentaires</span>  <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="./langageprog/constructions_elem/constructIndex.html">Index</a></li>
+              <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
+              <li><a href="./langageprog/constructions_elem/edi.html">Activités</a></li>
+              <li><a href="./langageprog/constructions_elem/exoconstructelem.html">Exercices</a></li>
+              <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li>
+            </ul>
+          </li>
           <li class="dropdown"><a href="#"><span>Thèmes</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>Représentation des données</span> <i
@@ -137,7 +135,8 @@
                   <li class="dropdown"><a href=""><span>Constructions élémentaires</span> <i
                         class="bi bi-chevron-right"></i></a>
                     <ul>
-                       <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
+                      <li><a href="./langageprog/constructions_elem/constructIndex.html">Index</a></li>
+                      <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
                       <li><a href="./langageprog/constructions_elem/edi.html">Activités</a></li>
                       <li><a href="./langageprog/constructions_elem/exoconstructelem.html">Exercices</a></li>
                       <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li>
@@ -183,9 +182,9 @@
                   <li class="dropdown"><a href="#"><span>Système d'exploitation</span> <i
                         class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="./amo/sysexp/ppe_se.html">Principe d'un système d'exploitation</a></li>
+                      <!-- <li><a href="./amo/sysexp/ppe_se.html">Principe d'un système d'exploitation</a></li>
                      
-                      <li><a href="./amo/sysexp/tp_terminus.html">TP terminus</a></li>
+                      <li><a href="./amo/sysexp/tp_terminus.html">TP terminus</a></li> -->
                    
                     </ul>
                   </li>
