--- a/langageprog/constructions_elem/edi.html
+++ b/langageprog/constructions_elem/edi.html
@@ -62,15 +62,14 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
-            <li class="dropdown"><a href=""><span>Constructions élémentaires</span> <i
-                        class="bi bi-chevron-down"></i></a>
-                    <ul>
-                      <li><a href="./projetjeudede.html">Projet jeu de dé</a></li>
-                      <li><a href="./edi.html">Activités</a></li>
-                      <li><a href="./exoconstructelem.html">Exercices</a></li>
-                      <li><a href="./tpturtle.html">Dessiner avec Turtle</a></li>
-
-                    </ul>
+         <li class="dropdown"><a href=""><span>Constructions élémentaires</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+               <li><a href="./constructIndex.html">Index</a></li>
+              <li><a href="./projetjeudede.html">Projet jeu de dé</a></li>
+              <li><a href="./edi.html">Activités</a></li>
+              <li><a href="./exoconstructelem.html">Exercices</a></li>
+              <li><a href="./tpturtle.html">Dessiner avec Turtle</a>
+            </ul>
           </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
 
