--- a/langageprog/constructions_elem/exoconstructelem.html
+++ b/langageprog/constructions_elem/exoconstructelem.html
@@ -65,6 +65,7 @@
             <li class="dropdown"><a href=""><span>Constructions élémentaires</span> <i
                         class="bi bi-chevron-down"></i></a>
                     <ul>
+                       <li><a href="./constructIndex.html">Index</a></li>
                       <li><a href="./projetjeudede.html">Projet jeu de dé</a></li>
                       <li><a href="./edi.html">Activités</a></li>
                       <li><a href="./exoconstructelem.html">Exercices</a></li>
