--- a/divers/rentree/rentree.html
+++ b/divers/rentree/rentree.html
@@ -108,38 +108,7 @@
 
   <main id="main">
     <!-- Section programme officiel -->
-    <section class="inner-page">
-      <div class="container">
-        <h2> Programme officiel</h2>
-        <!-- <table>
-          <thead>
-            <th>
-              Contenus
-            </th>
-            <th class="padleft10px">
-              Capacités attendues
-            </th>
-        
-          </thead>
-          <tbody>
-
-            <tr>
-              <td class="padleft10px">Modèle d’architecture séquentielle (von Neumann)</td>
-              <td class="padleft10px">Distinguer les rôles et les caractéristiques des différents constituants d’une
-                machine.
-                Dérouler l’exécution d’une séquence d’instructions simples du type langage machine.
-              </td>
-            </tr>
-
-            </tr>
-          </tbody>
-        </table> -->
-
-        <p>
-
-        </p>
-      </div>
-    </section><!-- End carousel -->
+  
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="features">
       <div class="container">
@@ -148,7 +117,7 @@
           <li class="nav-item col-3" data-aos="zoom-in">
             <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
               <i class="fa-solid fa-list-ul"></i>
-              <h4 class="d-none d-lg-block">Thèmes</h4>
+              <h4 class="d-none d-lg-block">Chapitres</h4>
             </a>
           </li>
           <li class="nav-item col-3" data-aos="zoom-in">
@@ -167,12 +136,22 @@
              
                     <p class="paddingside2 justifier">
                      <ul class=" examlisteinside">
-                        <li>Représentation des données</li>
-                        <li>Traitement des données</li>
-                        <li>Interaction Homme Machine</li>
-                        <li>Architectures matérielles</li>
-                        <li>Langages et programmation</li>
-                        <li>Algorithmique</li>
+                      <li>Chapitre 1 Histoire von neumann assembleur</li>
+                      <li>Chapitre 2 Constructions élementaires</li>
+                      <li>Chapitre 3 Fonctions</li>
+                      <li>Chapitre 4 Représentations des données Entiers</li>
+                      <li>Chapitre 5 Représentations des Flottants</li>
+                      <li>Chapitre 6 Types Construits</li>
+                      <li>Chapitre 7 Représentations des Caractères</li>
+                      <li>Chapitre 8 Algorithmique Parcours</li>
+                      <li>Chapitre 9 Algèbre booléenne</li>
+                      <li>Chapitre 10 Données en table</li>
+                      <li>Chapitre 11 IHM</li>
+                      <li>Chapitre 12 Algorithmique Tri Recherche dichotomique Gloutons KNN</li>
+                      <li>Chapitre 13 Système d'exploitation</li>
+                      <li>Chapitre 14 Réseaux</li>
+                      <li>Chapitre 15 Objets connectés (Microbit Rasp arduino)</li>
+
                      </ul>
 
                     </p>
