--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
                   </li>
                   <li class="dropdown"><a href=""><span>Fonctions</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
+                       <li><a href="./langageprog/Fonctions/foncIndex.html">Index</a></li>
+                      <li><a href="./langageprog/Fonctions/variables.html">Portée des variables jeu de nim</a></li>
                       <li><a href="./langageprog/Fonctions/jeudenim.html">Projet jeu de nim</a></li>
                       <li><a href="./langageprog/Fonctions/fonctions1.html">Première approche</a></li>
                       <li><a href="./langageprog/Fonctions/exercicesfonctions.html">Exercices</a></li> 
