--- a/langageprog/Fonctions/fonctions3tests.html
+++ b/langageprog/Fonctions/fonctions3tests.html
@@ -62,6 +62,15 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
+          <li class="dropdown"><a href=""><span>Fonctions</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+               <li><a href="./foncIndex.html">Index</a></li>
+                <li><a href="./jeudenim.html">Projet jeu de nim</a></li>
+                <li><a href="./variables.html">Portée des variables jeu de nim</a></li>
+                <li><a href="./fonctions1.html">Première approche</a></li>
+                <li><a href="./exercicesfonctions.html">Exercices</a></li> 
+            </ul>
+          </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
 
           <li class="dropdown"><a href="#"><span>Annexes</span> <i class="bi bi-chevron-down"></i></a>
