Correction de la consigne pour les exercies

--- a/langageprog/constructions_elem/exoconstructelem.html
+++ b/langageprog/constructions_elem/exoconstructelem.html
@@ -135,7 +135,7 @@
                     <p class="paddingside2">
                       
                       <ul>
-                      <li>Dans le dossier personnel NSI/langages, créer un sous-dossier exercices</li>
+                      <li>Enregistrez vos fichiers dans le dossier nsiprem/2_langagesConstructionselem/3_exo_constructionelem/</li>
                       <li>Il faudra créer un fichier Python pour chaque exercice</li>
                       <li>D’une manière générale, il est judicieux d’éviter accents et espaces dans les  les noms</li>
                       <li>On écrira les algorithmes sur le cahier NSI</li>
