--- a/index.html
+++ b/index.html
@@ -449,6 +449,13 @@
               <p class="description"><a href="http://www.france-ioi.org/">Cliquez-ici</a></p>
             </div>
           </div>
+            <div class="col-lg-4 col-md-6 mt-5">
+            <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
+              <div class="icon"><i class="bi bi-clock" style="color: #4680ff;"></i></div>
+              <h4 class="title"><a href="">Tous les exercices de l'année</a></h4>
+              <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/03d3-7202599">Cliquez-ici</a></p>
+            </div>
+          </div>
         </div>
 
       </div>
