--- a/langageprog/Fonctions/fonctions1.html
+++ b/langageprog/Fonctions/fonctions1.html
@@ -262,7 +262,7 @@ c = m.cos(0.5)</code></pre>
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/4eb7-4175064" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/4eb7-4175064" target="_blank" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
@@ -285,7 +285,7 @@ c = m.cos(0.5)</code></pre>
 
                 </ul>
                 <div class="btn-wrap">
-                  <a target="_blank" href="ressources/fonctionspremiereapprochecalculatrice.pdf" class="btn-buy">Télécharger</a>
+                  <a target="_blank" href="ressources/fonctionspremiereapprochecalculatrice.pdf" target="_blank" class="btn-buy">Télécharger</a>
                 </div>
               </div>
             </div>
