--- a/langageprog/Fonctions/jeudenim.html
+++ b/langageprog/Fonctions/jeudenim.html
@@ -286,7 +286,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/5513-4320816" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/5513-4320816" target="_blank" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
@@ -298,7 +298,7 @@
 
 
             <div class="btn-wrap">
-              <a href=" https://capytale2.ac-paris.fr/web/c/e968-4556827" class="btn-buy">Y aller</a>
+              <a href=" https://capytale2.ac-paris.fr/web/c/e968-4556827" target="_blank" class="btn-buy">Y aller</a>
             </div>
           </div>
         </div> 
