--- a/langageprog/Fonctions/variables.html
+++ b/langageprog/Fonctions/variables.html
@@ -207,7 +207,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/9f19-4446716" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/9f19-4446716" target="_blank" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
@@ -229,7 +229,7 @@
 
                 </ul>
                 <div class="btn-wrap">
-                  <a target="_blank" href="ressources/jeudenim.pdf" class="btn-buy">Télécharger</a>
+                  <a target="_blank" href="ressources/jeudenim.pdf" target="_blank" class="btn-buy">Télécharger</a>
                 </div>
               </div>
             </div> -->
