Ajout du target blank

--- a/langageprog/constructions_elem/exoconstructelem.html
+++ b/langageprog/constructions_elem/exoconstructelem.html
@@ -203,14 +203,14 @@
             <div class="icon-box" data-aos="zoom-in-left">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
               <h4 class="title"><a href="">Les exercices du notebook 1</a></h4>
-              <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/54a0-4051019">Y aller</a></p>
+              <p class="description"><a target="_blank" href="https://capytale2.ac-paris.fr/web/c/54a0-4051019">Y aller</a></p>
             </div>
           </div>
            <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="zoom-in-left">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
               <h4 class="title"><a href="">Les exercices du notebook 2</a></h4>
-              <p class="description"><a href="https://capytale2.ac-paris.fr/web/c/1f14-4141801"
+              <p class="description"><a target="_blank" href="https://capytale2.ac-paris.fr/web/c/1f14-4141801"
                   >Y aller</a></p>
             </div>
           </div>
@@ -257,7 +257,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/54a0-4051019" class="btn-buy">Y aller</a>
+                <a  href="https://capytale2.ac-paris.fr/web/c/54a0-4051019" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div>
